# duckdb

./: .gitignore  .gitmodules  CMakeLists.txt  delete_extra_ssd_dataset.sh  delete_ssd_dataset.sh  duplicate_ssd_dataset.sh  duplicate_ssd_dataset_parquet.sh  duplicate_ssd_dataset_pixels.sh  duplicate_ssd_dataset_v2.sh  rename_ssd_dataset_v2.sh
.github/workflows/: pixels-test.yml
benchmark/: CMakeLists.txt  benchmark_runner.cpp  interpreted_benchmark.cpp
benchmark/clickbench/: clickbench-micro-parquet-e0-1ssd.benchmark.in  clickbench-micro-parquet-e0-24ssd.benchmark.in  clickbench-micro-parquet-e2-24ssd.benchmark.in  clickbench-micro-pixels-e0-1ssd.benchmark.in  clickbench-micro-pixels-e0-24ssd.benchmark.in  clickbench-micro-pixels-e1-1ssd.benchmark.in  clickbench-micro-pixels-e1-24ssd.benchmark.in  clickbench-parquet-e0-1ssd.benchmark.in  clickbench-parquet-e0-24ssd.benchmark.in  clickbench-parquet-e2-24ssd.benchmark.in  clickbench-parquet-micro.benchmark.in  clickbench-parquet.benchmark.in  clickbench-pixels-e0-1ssd.benchmark.in  clickbench-pixels.benchmark.in  (+5 more)
examples/embedded-c++/: CMakeLists.txt  main.cpp
examples/pixels-example/: CMakeLists.txt  main.cpp
extension/: CMakeLists.txt
scripts/: arrow_benchmark.py  benchmark_generator.py  generate_clickbench_benchmarks.py  multidir-generator.py  parquet-multidir-generator.py  parquet_generate_micro_benchmark.py  parquet_generate_plain.py  parquet_generate_tpch_benchmark.py  pixels-multidir-generator.py  pixels_generate_micro_benchmark.py  pixels_generate_tpch_benchmark.py  run_benchmark.py  run_benchmark_v2.py
(+1086 files in other folders)
